WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143649
Selects don't scroll at some aspect ratios
https://bugs.webkit.org/show_bug.cgi?id=143649
Summary
Selects don't scroll at some aspect ratios
Simon Fraser (smfr)
Reported
2015-04-12 12:45:50 PDT
Selects don't scroll at some aspect ratios
Attachments
Patch
(4.31 KB, patch)
2015-04-12 12:47 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-04-12 12:47:33 PDT
Created
attachment 250616
[details]
Patch
WebKit Commit Bot
Comment 2
2015-04-12 13:19:02 PDT
Comment on
attachment 250616
[details]
Patch Clearing flags on attachment: 250616 Committed
r182672
: <
http://trac.webkit.org/changeset/182672
>
WebKit Commit Bot
Comment 3
2015-04-12 13:19:05 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 4
2015-04-13 23:30:58 PDT
The new test is broken on Windows: @@ -1,4 +1,4 @@ -PASS select.scrollTop is targetTop +FAIL select.scrollTop should be 28. Was 16. PASS successfullyParsed is true
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug