Selects don't scroll at some aspect ratios https://bugs.webkit.org/show_bug.cgi?id=143649 rdar://problem/19365694

Reviewed by Darin Adler.
Source/WebCore:

Fix width/height flip in RenderListBox which caused us to fail to scroll when
the list was wider than the scroll height.

We're generally confused about RenderListBox scroll offsets (webkit.org/b/143648)
but this fixes the immediate problem.

Test: fast/forms/listbox-visible-size.html

* rendering/RenderListBox.h:

LayoutTests:

* fast/forms/listbox-visible-size-expected.txt: Added.
* fast/forms/listbox-visible-size.html: Added.


Canonical link: https://commits.webkit.org/161670@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182672 268f45cc-cd09-0410-ab3c-d52691b4dbfc